package delivery.abstractfactory;

/** Abstract product: a button. */
public interface Button {

    void paint();
}
