package delivery.abstractfactory;

/** Concrete product: Windows checkbox. */
public class WindowsCheckbox implements Checkbox {

    @Override
    public void paint() {
        System.out.println("Rendering Windows checkbox");
    }
}
