package delivery.abstractfactory;

/** Abstract product: a checkbox. */
public interface Checkbox {

    void paint();
}
